update travisCI