@@ -1,19 +1,10 @@
-# For Java 8, try this
-FROM openjdk:8-jdk-alpine
-
-# For Java 11, try this
-#FROM adoptopenjdk/openjdk11:alpine-jre
-
-# Refer to Maven build -> finalName
-ARG JAR_FILE=devworks-1.0.0.jar
-
-# cd /opt/app
-WORKDIR /opt/app
-
-# cp target/spring-boot-web.jar /opt/app/app.jar
-COPY ${JAR_FILE} app.jar
-
-# java -jar /opt/app/app.jar
-ENTRYPOINT ["java","-jar","app.jar"]
+FROM openjdk:8-jre-alpine
 
 EXPOSE 80
+
+ARG JAR_FILE=devworks-1.0.0.jar
+
+ADD ${JAR_FILE} app.jar
+
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/app.jar"]
+
